--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ googleAnalytics = ""
 	custom_js  = []
 
 	# Syntax highlighting theme
-	highlight_css  = ""
+	highlight_css  = "/stylesheets/highlight/monokai-sublime.css"
 
 	[params.palette]
     	primary = "teal"
