--- a/config.toml
+++ b/config.toml
@@ -77,7 +77,7 @@ googleAnalytics = ""
 	weight = 50
 
 [[menu.main]]
-	name   = "API 结构"
+	name   = "API 文档"
 	url    = "apis/"
 	weight = 60
 [[menu.main]]
