--- a/config.toml
+++ b/config.toml
@@ -38,12 +38,10 @@ googleAnalytics = ""
     	text = "Ubuntu"
     	code = "Ubuntu Mono"
 
-
 [social]
 	twitter = ""
 	github  = "notadd"
 	email   = "notadd@ibenchu.com"
-
 
 # [[menu.main]]
 # 	name   = "Notadd"
@@ -54,7 +52,6 @@ googleAnalytics = ""
 	name   = "关于"
 	url    = "introductions/"
 	weight = 10
-
 
 [[menu.main]]
 	name   = "开始使用"
@@ -67,27 +64,44 @@ googleAnalytics = ""
 	weight = 30
 
 [[menu.main]]
+    name   = "拓展技术文档"
+    url    = "expands"
+    weight = 40
+
+[[menu.main]]
+    name   = "模块技术文档"
+    url    = "modules"
+    weight = 50
+
+[[menu.main]]
+    name   = "插件技术文档"
+    url    = "extensions"
+    weight = 60
+
+[[menu.main]]
 	name   = "相关技术"
 	url    = "technologies/"
-	weight = 40
+	weight = 70
 
 [[menu.main]]
 	name   = "二次开发"
 	url    = "develops/"
-	weight = 50
+	weight = 80
 
 [[menu.main]]
 	name   = "API 文档"
 	url    = "apis/"
-	weight = 60
+	weight = 90
+
 [[menu.main]]
 	name   = "技术规范"
 	url    = "standards/"
-	weight = 70
+	weight = 100
+
 [[menu.main]]
 	name   = "使用laradock部署"
 	url    = "laradock/"
-	weight = 80
+	weight = 110
 
 [blackfriday]
 	smartypants	= true
