--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,9 @@ googleAnalytics = ""
 	# Repository
 	provider = "GitHub"
 	repo_url = "https://github.com/notadd/notadd"
+	
+	provider = "Gitee"
+	repo_url = "https://gitee.com/notadd/notadd"
 
 	version = "0.11.1"
 	logo = "images/logo.png"
