--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
     - hugo
 
 after_success:
-    - sh -c "if [ '$archive' = 'yes' ]; then curl -T public/ http://v0.api.upyun.com/notadd/demo/ -u "$UPYUN" -v; fi"
+    - curl -T public/ http://v0.api.upyun.com/notadd/demo/ -u "$UPYUN" -v; fi"
