--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ git:
     submodules: true
   
 install: 
-    - go get github.com/spf13/hugo
+    - curl -O https://github.com/gohugoio/hugo/releases/download/v0.31/hugo_0.31_Linux-64bit.tar.gz
+    - tar -zxvf hugo_0.31_Linux-64bit.tar.gz
     - go get github.com/polym/upx
 
 script:
-    - hugo
+    - ./hugo
 
 after_success:
     - upx notadd ibenchu bc123qwe
