--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
   
 install: 
     - curl -O https://github.com/gohugoio/hugo/releases/download/v0.31/hugo_0.31_Linux-64bit.tar.gz
-    - tar -zxvf hugo_0.31_Linux-64bit.tar.gz
+    - tar -zxvf hugo_0.31_Linux-64bit\ .tar.gz
     - go get github.com/polym/upx
 
 script:
