--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ git:
     submodules: true
   
 install: 
-    - go get -v github.com/gohugoio/hugo
+    - sudo apt-get install hugo
     - go get github.com/polym/upx
 
 script:
