--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ git:
     
 
 install: 
-    - lftp -v
+    - curl -o http://collection.b0.upaiyun.com/softwares/upx/upx-linux-amd64-v0.2.3 upx
 
 after_success:
-    
+    - upx login docs-notadds "$DOCS" "$UPYUN"
     - upx put ./*   docs/
