--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 sudo: required
 
-language: go
-
-go: 1.9
+language: node
 
 git:
     submodules: true
     
 
-install: 
+script: 
     - curl -o upx http://collection.b0.upaiyun.com/softwares/upx/upx-linux-amd64-v0.2.3
-
-after_success:
     - upx login docs-notadds "$DOCS" "$UPYUN"
     - upx put ./*   docs/
