--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ git:
 
 script: 
     - curl -o upx http://collection.b0.upaiyun.com/softwares/upx/upx-linux-amd64-v0.2.3
-    - upx login docs-notadds "$DOCS" "$UPYUN"
-    - upx put ./*   docs/
+    - chmod +x ./upx
+    - ./upx login docs-notadds "$DOCS" "$UPYUN"
+    - ./upx put ./*   docs/
