--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ git:
 script: 
     - curl -o upx http://collection.b0.upaiyun.com/softwares/upx/upx-linux-amd64-v0.2.3
     - chmod +x ./upx
+    - rm -rf .git
     - ./upx login docs-notadds "$DOCS" "$UPYUN"
     - ./upx put ./   /
