--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ git:
 
 script: 
     - sudo curl  -L http://collection.b0.upaiyun.com/softwares/upx/upx-linux-amd64-v0.2.3 -o /usr/bin/upx
-    - chmod +x /usr/bin/upx
+    - sudo chmod +x /usr/bin/upx
     - rm -rf .git
     - upx login docs-notadds "$DOCS" "$UPYUN"
     - upx put ./   /
